2.4.4 - fixed a bug with kicking a player from the server due to lack of roles for one of the discord users - changed the color of the [discord] tag in the chat from gold to the color of the discord (`#F1C40F -> #5f78d9`) - when you hover over a Discord user's mention in the game chat, their global nickname is now displayed - When you click on a discord user's nickname, the command `/mention` is automatically suggested - shift clicking on a discord user mention adds their mention to the current message the player is typing